# tink

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/: QUALITY_ARCHITECTURE.md  tink-component-validator.md  tink-full-validation.md  tink-hooks-validator.md  tink-layout-validator.md  tink-render-validator.md  tink-terminal-mode-validator.md
.github/workflows/: ci.yml  quality.yml  release.yml
docs/: COMPARISON.md  glm_chat_comparison.md
docs/ar/1-24/: architecture-overview.md  implementation-plan.md
docs/improve/1-24/: architecture-analysis.md  architecture-redesign.md
docs/todo/: FEATURE_ROADMAP.md  TERMINAL_UI_COMPARISON_AND_BUGS.md
examples/: aria.rs  borders.rs  box_backgrounds.rs  chat.rs  counter.rs  crlf_test.rs  cross_thread.rs  debug.rs  debug_80x24.rs  debug_layout.rs  debug_render.rs  debug_taffy.rs  debug_terminal.rs  exact_app_test.rs  fixed_bottom_demo.rs  fullscreen_test.rs  glm_chat.rs  glm_chat_old.rs  hello.rs  incremental_rendering.rs  inline_mode.rs  interactive_demo.rs  jest.rs  justify_content.rs  message_demo.rs  mouse_demo.rs  println_element.rs  render_api_demo.rs  rich_text.rs  sage_exact.rs  select_input.rs  simple_test.rs  static_demo.rs  static_example.rs  streaming_demo.rs  subprocess_output.rs  table.rs  terminal_resize.rs  terminal_test.rs  test_column.rs  (+7 more)
src/: lib.rs  main.rs  prelude.rs
src/cmd/: executor.rs  mod.rs  tasks.rs
src/components/: barchart.rs  box_component.rs  list.rs  message.rs  mod.rs  modal.rs  newline.rs  progress.rs  scrollable.rs  scrollbar.rs  spacer.rs  sparkline.rs  spinner.rs  static_output.rs  table.rs  tabs.rs  text.rs  text_input.rs  transform.rs
src/core/: color.rs  element.rs  mod.rs  style.rs
src/hooks/: context.rs  mod.rs  use_accessibility.rs  use_app.rs  use_cmd.rs  use_effect.rs  use_focus.rs  use_input.rs  use_measure.rs  use_memo.rs  use_mouse.rs  use_scroll.rs  use_signal.rs  use_stdio.rs  use_window_title.rs
src/layout/: engine.rs  measure.rs  mod.rs
src/renderer/: app.rs  builder.rs  element_renderer.rs  mod.rs  output.rs  registry.rs  render_to_string.rs  runtime.rs  static_content.rs  terminal.rs
src/runtime/: context.rs  environment.rs  mod.rs  panic_handler.rs  signal_handler.rs
src/testing/: assertions.rs  generators.rs  golden.rs  mod.rs  renderer.rs
tests/: cmd_integration_test.rs  integration_test.rs  layout_alignment_test.rs  property_tests.rs  terminal_mode_test.rs  virtual_screen_diff_test.rs
