[package]
name = "tink"
version = "0.1.0"
edition = "2024"
description = "A terminal UI framework inspired by ink"
license = "MIT"
repository = "https://github.com/user/tink"

[lib]
name = "tink"
path = "src/lib.rs"

[[bin]]
name = "tink"
path = "src/main.rs"

[dependencies]
# Layout engine
taffy = "0.7"

# Terminal operations
crossterm = "0.28"

# Unicode width calculation
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Text wrapping
textwrap = "0.16"

# Logging
log = "0.4"

# Error handling
thiserror = "2.0"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"
